# schematic

./: Cargo.toml
output/: block_selector_test.schem  example.schem  grad.schem  madn.schem
src/: example.rs  lib.rs
src/schematic/: block_entity.rs  item_slot.rs  mod.rs  schematic.rs
src/schematic_builder/: block_builders.rs  blocks.rs  mod.rs  schematic_builder.rs
src/schematic_builder/block_from_color/: block_builder_json.rs  mod.rs
