[package]
name = "schematic"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hematite-nbt = "0.5.2"
itertools = "0.10.5"
kd-tree = "0.5.1"
math = "0.10.0"
serde = "1.0.158"
serde_json = "1.0.94"
typenum = "1.16.0"
